resume: tech version in latex

--- a/resumes/cv_zcj_tech.tex
+++ b/resumes/cv_zcj_tech.tex
@@ -104,9 +104,7 @@ First computer: Mac IIci
 
 \section{}
 \sectionspace % Some whitespace after the section
-
 \section{}
-\sectionspace % Some whitespace after the section
 
 %------------------------------------------------
 % Patent Work
@@ -139,6 +137,21 @@ First computer: Mac IIci
 
 %------------------------------------------------
 
+\runsubsection{Even Financial}
+\descript{| VP Engineering}
+\location{Aug 2018 - Present | New York, NY}
+
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Personalization systems in Scala and React. Refine CDP design.
+\item Build and automation of cloud security compliance, governance, diligence.
+\item Admin applications with permissions entitlement.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%----------------------------------------------------------------------------------------
+
 \runsubsection{<conversational templating app>}
 \descript{| Lead}
 
@@ -164,7 +177,7 @@ First computer: Mac IIci
 Conversational content UI with dynamic grid UX.
 \begin{tightitemize}
 \item Frontend widget atomic components are stateless-cachable on vert.x + React.
-\item microservice middleware in vert.x (java), Kotlin of personalization. The
+\item Microservice middleware in vert.x (java), Kotlin of personalization.
 \item Semantic content admin CMS with wagtail / python.
 \item Spec’d CMS with stockholder. Built team; focused biz unit with GM.
 \item Developed new product strategy with exec team.
@@ -205,33 +218,18 @@ Frontend and middle applications for Clinical Trials design and analysis
 \begin{tightitemize}
 \item Angular js and MVC Architecture.
 \item Made a highly configurable grid rendering system for Angular
-\item Set process standards, 150-200\% productivity gains. 
+\item Set process standards, 150-200\% productivity gains.
 \item Devised new behavioral analytic measures, driving product design.
 \item Cucumber BDD best practices, from 3-amigos feature to agile standards.
 \item Designed and executed an 8-layer QA automatiomn. Niche tools and strategies.
-\item NYC Office lead for Programming Foundations Guild, Frontend Guild. 
-\item Hosted conferences, external speakers, etc. 
+\item NYC Office lead for Programming Foundations Guild, Frontend Guild.
+\item Hosted conferences, external speakers, etc.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
 
 
 %------------------------------------------------
-
-\runsubsection{PageUI}
-\descript{| Co-Founder, CTO}
-\location{Jun 2008 - Mar 2009 | Tempe, AZ}
-
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-Drag'n'drop UI/UX for bookmark management and workflow
-\begin{tightitemize}
-\item Developed early reactive-JS codebase, and stacked our app/biz on it.
-\item Mozilla later supported a nearly identical labs project, with major adoption.
-\item Usabilty research showed preference over X-marks, which was mainstream.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-%----------------------------------------------------------------------------------------
 
 \end{minipage} % The end of the right column
 
@@ -309,6 +307,22 @@ Drag'n'drop UI/UX for bookmark management and workflow
 \section{Research \& Projects}
 
 %------------------------------------------------
+
+\runsubsection{PageUI}
+\descript{| Co-Founder, CTO}
+\location{Jun 2008 - Mar 2009 | Tempe, AZ}
+
+Drag'n'drop UI/UX for bookmark management and workflow
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Developed early reactive-JS codebase, and stacked our app/biz on it.
+\item Mozilla later supported a nearly identical labs project, with major adoption.
+\item Usabilty research showed preference over X-marks, which was mainstream.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+%----------------------------------------------------------------------------------------
+
 
 \runsubsection{Cloud App Platform}
 \descript{| R\&D Engineering}
