resume: research latex revisions

--- a/resumes/cv_zcj_research.tex
+++ b/resumes/cv_zcj_research.tex
@@ -20,7 +20,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[letterpaper]{deedy-resume} % Use US Letter paper, change to a4paper for A4
-
 \begin{document}
 
 %----------------------------------------------------------------------------------------
@@ -30,11 +29,12 @@
 % \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Zachary}{Jones}{ % Your name
-\urlstyle{same}\href{mailto:zak@newalexandria.org}{zak@newalexandria.org} ||  \href{https://www.twitter.com/invis_insight}{@invis\_insight} ||   \href{https://www.linkedin.com/in/newalexandria}{LinkedIn}/\href{https://www.github.com/NewAlexandria}{Github}/\href{https://www.stackoverflow/story/newalexandria}{SE}: \href{https://www.linkedin.com/in/newalexandria}{newalexandria}
- \\ % Your website, LinkedIn profile or other web address
 
-\href{tel:+1.412.628.0954}{412.628.0954} mobile  ||  220 E. 63rd Street, New York, NY 10065
+% Your website, LinkedIn profile or other web address
+\href{mailto:zak@newalexandria.org}{zak@newalexandria.org}  || \href{tel:+1.412.628.0954}{412.628.0954} mobile  ||  220 E. 63rd Street, New York, NY 10065
+
 }
+\color{BrickRed}{ Research Resume Only.  For CV, see the links below.  }
 
 %----------------------------------------------------------------------------------------
 %    LEFT COLUMN
@@ -82,6 +82,168 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 \sectionspace % Some whitespace after the section
 
+%------------------------------------------------------------------------------
+
+\includegraphics[width=2.3in]{github-work}
+
+\sectionspace % Some whitespace after the section
+
+\includegraphics[width=2.3in]{stackoverflow-reps}
+
+Favorite editor: vim
+
+First computer: Mac IIci
+
+\section{}
+\section{}
+\section{}
+
+\section{}
+\section{}
+
+\section{}
+\sectionspace % Some whitespace after the section
+
+\section{}
+\sectionspace % Some whitespace after the section
+\section{}
+
+%------------------------------------------------
+% Patent Work
+%------------------------------------------------
+
+\section{Patent Work}
+
+\begin{tabular}{rll}
+2014 & Business App Cloud\\
+2010 & Crystallization Reactor\\
+2008 & Vortex water\\
+2007 & HRS Semantic vectors\\
+\end{tabular}
+
+
+\end{minipage} % The end of the left column
+\hfill
+%
+%----------------------------------------------------------------------------------------
+%    RIGHT COLUMN
+%----------------------------------------------------------------------------------------
+%
+\begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
+
+%------------------------------------------------
+% Experience
+%------------------------------------------------
+
+\section{Experience}
+
+%------------------------------------------------
+
+\runsubsection{<conversational templating app>}
+\descript{| Lead}
+
+\location{Mar 2017 - Feb 2018 | New York, NY}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Research into semantic features of job-seeker emails \& time-series.
+\item Hypermedia API spec in siren format, via swagger. PWA webapp in React
+\item Clickable prototype. Medium-fidelity screens based on data model. UX flow.
+\item Dual-appstore deploy to iOS and Android, via React Native.
+\item Develop evented system. Incremental data and extraction jobs with amqp.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
+\runsubsection{Investopedia}
+\descript{| Director of Engineering}
+\location{Dec 2017 - Aug 2018 | New York, NY}
+
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+Conversational UI with dynamic content grid UX.
+\begin{tightitemize}
+\item Frontend widget atomic components are stateless-cachable on vert.x + React.
+\item Microservice middleware in vert.x (java), Kotlin of personalization.
+\item Semantic content admin CMS with wagtail / python.
+\item Spec’d CMS with stockholder. Built team; focused biz unit with GM.
+\item Developed new product strategy with exec team.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
+\runsubsection{MyBankTracker}
+\descript{| Director of Engineering (CTO)}
+\location{Oct 2015 - Dec 2017 | Brooklyn, NY}
+
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+Semantic UI on top of Personalization Engine for Financial Products
+\begin{tightitemize}
+\item Semantic extraction using custom model tree (CoreNLP proved too heavy).
+\item NB classifier for extraction outliers. Tag for reinforcement, or auto-publishing
+\item NB classifier to categorize product description sentences into semantic groups for personalized / focused UI displays.
+\item Elasticsearch linked-data results (HAML) and grouped search results. (neo4j)
+\item Data cleaning and processing of product ETL pipelines.
+\item ML admin panels integrated seamlessly into an editorial admin (CMS).
+\item Segmentation by cluster analysis (SQL, offline).  Stan test of stream modeling.
+\item Data ontology formed via semiotics of consumer financial banking.
+
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
+\runsubsection{Medidata Solutions}
+\descript{| Manager, Frontend Engineering}
+\location{Aug 2014 - Oct 2015 | New York, NY}
+
+Frontend and middle applications for Clinical Trials design and analysis
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Angular js and MVC Architecture.
+\item Made a highly configurable grid rendering system for Angular
+\item Set process standards, 150-200\% productivity gains.
+\item Devised new behavioral analytic measures, driving product design.
+\item Cucumber BDD best practices, from 3-amigos feature to agile standards.
+\item Designed and executed an 8-layer QA automatiomn. Niche tools and strategies.
+\item NYC Office lead for Programming Foundations Guild, Frontend Guild.
+\item Hosted conferences, external speakers, etc.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+%------------------------------------------------
+
+\runsubsection{PageUI}
+\descript{| Co-Founder, CTO}
+\location{Jun 2008 - Mar 2009 | Tempe, AZ}
+
+Drag'n'drop UI/UX for bookmark management and workflow
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightitemize}
+\item Developed early reactive-JS codebase, and stacked our app/biz on it.
+\item Mozilla later supported a nearly identical labs project, with major adoption.
+\item Usabilty research showed preference over X-marks, which was mainstream.
+\end{tightitemize}
+
+\sectionspace % Some whitespace after the section
+
+
+%------------------------------------------------
+
+\end{minipage} % The end of the right column
+
+%----------------------------------------------------------------------------------------
+%    SECOND PAGE (EXAMPLE)
+%----------------------------------------------------------------------------------------
+
+\newpage % Start a new page
+
+\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
+
 %------------------------------------------------
 % Awards
 %------------------------------------------------
@@ -128,11 +290,8 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 \begin{tabular}{rll}
 2018 & RPA Summit\\
 2017 & AI World\\
-2010 & \textbf{Patent:} Crystallization Reactor\\
 2009 & Filters \& Reflections anthology\\
-2008 & \textbf{Patent:} Vortex water\\
 2007 & AZ State STEM curriculum WG\\
-2007 & \textbf{Patent:} HRS Semantic vectors\\
 2007 & Technoetic Arts Journal\\
 2004 & Qi and Complexity, Beijing\\
 2001 & Phytoremediation, Dept. Energy\\
@@ -140,128 +299,9 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 \sectionspace % Some whitespace after the section
 
-
-%------------------------------------------------------------------------------
-
 \end{minipage} % The end of the left column
 \hfill
-%
-%----------------------------------------------------------------------------------------
-%    RIGHT COLUMN
-%----------------------------------------------------------------------------------------
-%
 \begin{minipage}[t]{0.66\textwidth} % The right column takes up 66% of the text width of the page
-
-%------------------------------------------------
-% Experience
-%------------------------------------------------
-
-\section{Experience}
-
-%------------------------------------------------
-
-\runsubsection{<conversational templating app>}
-\descript{| Lead}
-
-\location{Mar 2017 - Feb 2018 | New York, NY}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightitemize}
-\item Research into semantic features of job-seeker emails \& time-series.
-\item Hypermedia API spec in siren format, via swagger. PWA webapp in React
-\item Clickable prototype. Medium-fidelity screens based on data model. UX flow.
-\item Dual-appstore deploy to iOS and Android, via React Native.
-\item Develop evented system. Incremental data and extraction jobs with amqp.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-
-\runsubsection{Investopedia}
-\descript{| Director of Engineering}
-\location{Dec 2017 - Aug 2018 | New York, NY}
-\begin{tightitemize}
-\item Frontend widget atomic components are stateless-cachable on vert.x + React.
-\item microservice middleware in vert.x (java), Kotlin of personalization. The
-\item Semantic content admin CMS with wagtail / python.
-\item Spec’d CMS with stockholder. Built team; focused biz unit with GM.
-\item Developed new product strategy with exec team.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-
-\runsubsection{MyBankTracker}
-\descript{| Director of Engineering (CTO)}
-\location{Oct 2015 - Dec 2017 | Brooklyn, NY}
-
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-Semantic UI on top of Personalization Engine for Financial Products
-\begin{tightitemize}
-\item Semantic extraction using custom model tree (CoreNLP proved too heavy).
-\item NB classifier for extraction outliers. Tag for reinforcement, or auto-publishing
-\item NB classifier to categorize product description sentences into semantic groups for personalized / focused UI displays.
-\item Elasticsearch linked-data results (HAML) and grouped search results. (neo4j)
-\item Data cleaning and processing of product ETL pipelines.
-\item ML admin panels integrated seamlessly into an editorial admin (CMS).
-\item Segmentation by cluster analysis (SQL, offline).  Stan test of stream modeling.
-\item Data ontology formed via semiotics of consumer financial banking.
-
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-%------------------------------------------------
-
-\runsubsection{Medidata Solutions}
-\descript{| Manager, Frontend Engineering}
-\location{Aug 2014 - Oct 2015 | New York, NY}
-
-Frontend and middle applications for Clinical Trials design and analysis
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightitemize}
-\item Angular js and MVC Architecture.  Angular core component engineering.
-\item Set process standards, 150-200\% productivity gains. 
-\item Devised new behavioral analytic measures, driving product design.
-\item Cucumber BDD best practices, from 3-amigos feature to agile standards.
-\item Designed and executed an 8-layer QA automatiomn. Niche tools and strategies.
-\item NYC Office lead for Programming Foundations Guild, Frontend Guild. 
-\item Hosted conferences, external speakers, etc. 
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-
-%------------------------------------------------
-
-\runsubsection{PageUI}
-\descript{| Co-Founder, CTO}
-\location{Jun 2008 - Mar 2009 | Tempe, AZ}
-\begin{tightitemize}
-\item Developed early reactive-JS codebase, and stacked our app/biz on it.
-\item Mozilla later supported a nearly identical labs project, with major adoption.
-\item Usabilty research showed preference over X-marks, which was mainstream.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-%----------------------------------------------------------------------------------------
-
-\end{minipage} % The end of the right column
-
-%----------------------------------------------------------------------------------------
-%    SECOND PAGE (EXAMPLE)
-%----------------------------------------------------------------------------------------
-
-\newpage % Start a new page
-
-%\begin{minipage}[t]{0.33\textwidth} % The left column takes up 33% of the text width of the page
-
-%\section{Example Section}
-
-%\end{minipage} % The end of the left column
-\hfill
-\begin{minipage}[t]{1\textwidth} % The right column takes up 66% of the text width of the page
 
 %------------------------------------------------
 % Research
@@ -269,23 +309,8 @@ Frontend and middle applications for Clinical Trials design and analysis
 
 \section{Research \& Projects}
 
-%------------------------------------------------
 
-\runsubsection{HRS}
-\descript{| Co-Founder, CTO}
-
-\location{Jan 2006 - Oct 2007 | Vancouver, BC}
-\begin{tightitemize}
-\item Designed search and matching algorithms for social search.
-\item Semantics modeled as state vectors for protocol engineering.  Pre-blockchain.
-\item Performed prior-art research and wrote a draft patent. IP law firm counsel.
-\item Developed a collaboration-ware app for course software, distance education.
-\end{tightitemize}
-
-\sectionspace % Some whitespace after the section
-
-
-%------------------------------------------------
+%----------------------------------------------------------------------------------------
 
 \runsubsection{Cloud App Platform}
 \descript{| R\&D Engineering}
@@ -296,7 +321,7 @@ Frontend and middle applications for Clinical Trials design and analysis
 \item Designed lambda-as-a-service pattern for data-platform strategy.
 \item Won trust with executive backers, started working group.
 \item Developed patent strategy with chief patent counsel.
-\item All of the above at leading Pharma and Financial Data corp.
+\item Two separte R\&D initiatives across Pharma and Financial Data corps.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
@@ -386,7 +411,6 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 
 \sectionspace % Some whitespace after the section
 
-
 %------------------------------------------------
 
 \runsubsection{Weather-sensitive Crystal Reactor}
@@ -401,7 +425,6 @@ Multiple studies of a non-turbulent vortex hydrodynamic equilibrium.
 \end{tightitemize}
 
 \sectionspace % Some whitespace after the section
-
 
 %------------------------------------------------
 
