--- a/resumes/deedy-resume.cls
+++ b/resumes/deedy-resume.cls
@@ -23,6 +23,7 @@
 \definecolor{headings}{HTML}{6A6A6A} % The color of the large sections
 \definecolor{subheadings}{HTML}{333333} % The color of subsections and places worked/studied
 \definecolor{date}{HTML}{666666} % The color used for the Last Updated text at the top right
+\definecolor{pop}{HTML}{dd2222} 
 
 %----------------------------------------------------------------------------------------
 %	FONTS
@@ -49,6 +50,9 @@
 Last Updated on \today % Last Updated text
 \end{textblock}}
 
+\newcommand{\poptext}[3]{
+\color{BrickRed}
+}
 %----------------------------------------------------------------------------------------
 %	MAIN HEADING COMMAND
 %----------------------------------------------------------------------------------------
