resume: R&D, made mdsol more cloud/lambda focused

--- a/resumes/cv_zcj_research.tex
+++ b/resumes/cv_zcj_research.tex
@@ -200,15 +200,15 @@ Semantic UI on top of Personalization Engine for Financial Products
 \descript{| Manager, Frontend Engineering}
 \location{Aug 2014 - Oct 2015 | New York, NY}
 
-Frontend and middle applications for Clinical Trials design and analysis
+Platform and Component strategy for Clinical Trials design and analysis.
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
-\item Angular js and MVC Architecture.
-\item Made a highly configurable grid rendering system for Angular
-\item Set process standards, 150-200\% productivity gains.
+\item Developed a data-product strategy for partner apps in our cloud.
+\item Designed lambda-as-a-service architecture 3yr before FOSS \& AWS.
+\item Designed and executed 14-layer QA automation. Niche tools and strategies.
+\item Highly configurable grid rendering system for Study Design.
+\item Set process standards, 150-200\% productivity gains. Team of 200.
 \item Devised new behavioral analytic measures, driving product design.
-\item Cucumber BDD best practices, from 3-amigos feature to agile standards.
-\item Designed and executed an 8-layer QA automatiomn. Niche tools and strategies.
 \item NYC Office lead for Programming Foundations Guild, Frontend Guild.
 \item Hosted conferences, external speakers, etc.
 \end{tightitemize}
