update research folio

--- a/resumes/cv_zcj_research.tex
+++ b/resumes/cv_zcj_research.tex
@@ -31,10 +31,9 @@
 \namesection{Zachary}{Jones}{ % Your name
 
 % Your website, LinkedIn profile or other web address
-\href{mailto:zak@newalexandria.org}{zak@newalexandria.org}  || \href{tel:+1.412.628.0954}{412.628.0954} mobile  ||  220 E. 63rd Street, New York, NY 10065
+\href{mailto:zak@newalexandria.org}{zak@newalexandria.org}  || \href{tel:+1.412.628.0954}{412.628.0954} mobile  ||  220 E. 63rd Street, New York, NY 10065 }
 
-}
-\color{BrickRed}{ Research Resume Only.  For CV, see the links below.  }
+\color{BrickRed}{ R\&D / IP Resume Only.  For CV, see the links below.  }
 
 %----------------------------------------------------------------------------------------
 %    LEFT COLUMN
@@ -64,7 +63,7 @@ VR/AR work, engineering arts.
 \subsection{Arizona State University}
 \descript{MFA; HCI (Digital Technology)}
 \location{Tempe, AZ. May 2007}
-AR, HCI, Simulation, 3D/CNC, water.
+AR, HCI, Simulation, 3D/CNC, hydrodynamics.
 
 \sectionspace % Some whitespace after the section
 
@@ -84,7 +83,7 @@ StackNetwork:// \href{https://stackexchange.com/users/97237/new-alexandria?tab=a
 
 %------------------------------------------------------------------------------
 
-\includegraphics[width=2.3in]{github-work}
+\includegraphics[width=2.3in]{github-work2}
 
 \sectionspace % Some whitespace after the section
 
@@ -145,8 +144,8 @@ First computer: Mac IIci
 \location{Mar 2017 - Feb 2018 | New York, NY}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
-\item Research into semantic features of job-seeker emails \& time-series.
-\item Hypermedia API spec in siren format, via swagger. PWA webapp in React
+\item Research \& modeling of semantic features in job messaging \& time-series.
+\item Hypermedia API spec in siren format, via swagger. PWA webapp in React.
 \item Clickable prototype. Medium-fidelity screens based on data model. UX flow.
 \item Dual-appstore deploy to iOS and Android, via React Native.
 \item Develop evented system. Incremental data and extraction jobs with amqp.
@@ -204,7 +203,7 @@ Platform and Component strategy for Clinical Trials design and analysis.
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightitemize}
 \item Developed a data-product strategy for partner apps in our cloud.
-\item Designed lambda-as-a-service architecture 3yr before FOSS \& AWS.
+\item Designed lambda-as-a-service architecture 3yr before FOSS \& AWS options.
 \item Designed and executed 14-layer QA automation. Niche tools and strategies.
 \item Highly configurable grid rendering system for Study Design.
 \item Set process standards, 150-200\% productivity gains. Team of 200.
@@ -251,7 +250,8 @@ Drag'n'drop UI/UX for bookmark management and workflow
 \section{Awards}
 
 \begin{tabular}{rll}
-2019 & \textbf{M\&A exit:} Personalization\\
+2019 & \textbf{M\&A exit:} Personalization.\\
+ & Exit price 11x from when hired\\
 2008 & NASA/Ames Arts \& Engineering\\
 2007 & Grant for CFD analysis\\
 2006 & Seed capital raised: Edson\\
